syntax = "proto3";

option csharp_namespace = "GSTORE_Client";

package gstoreservices;

service StorageServerServices {
	rpc ListServer(ListServerRequest) returns (ListServerReply);
	rpc ListGlobal(ListGlobalRequest) returns (ListGlobalReply);
	rpc Read (ReadRequest) returns (ReadReply);
	rpc Write (WriteRequest) returns (WriteReply);
}

message ReadRequest {
	string partitionID = 1;
	string objectID = 2;
}

message ReadReply {
	string value = 1;
	bool success = 2;
}

message WriteRequest {
	string partitionID = 1;
	string objectID = 2;
	string value = 3;
}

message WriteReply {
	bool success = 1;
	string serverID = 2;
}

message ListServerRequest {}

message ListServerReply {
	string listing = 1;
}


message ListGlobalRequest {}

message ListGlobalReply {
	string listing = 1;
}